--- a/src/AIStream/AIStreaming.csproj
+++ b/src/AIStream/AIStreaming.csproj
@@ -5,6 +5,7 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>45b11589-176c-4c4f-839d-c1580e4d6a80</UserSecretsId>
+		<Version>2.0.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
