--- a/src/AIStream/AIStreaming.csproj
+++ b/src/AIStream/AIStreaming.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net10.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<UserSecretsId>45b11589-176c-4c4f-839d-c1580e4d6a80</UserSecretsId>
+		<UserSecretsId>SignalR-AIStream</UserSecretsId>
 		<Version>2.0.0</Version>
 	</PropertyGroup>
 
